--- a/app/views/pages/index.slim
+++ b/app/views/pages/index.slim
@@ -10,9 +10,11 @@ section.logo-divider.two
   .content
     h1 Frontpage
     p.lead Dette er forsiden, her kommer masse fint etterhvert.
-    p.lead &nbsp;
 
 section.logo-divider.two
   .content
     h1 Mer ting
-    p.lead Logoen kommer opp mellom seksjonene.
+    h2 Litt undertittel
+    h4 Mer undertittel
+    p.lead Dette er "Lead tekst". Logoaktiv sak kommer opp mellom seksjonene.
+    p Vanlig tekst til slutt.
