--- a/app/views/users/index.slim
+++ b/app/views/users/index.slim
@@ -1,8 +1,9 @@
 - unless @users.empty?
-  table
-    - @users.each do |user|
-      tr
-        td = user.name
-        td = user.email
-        td = user.id
-
+  table.ui.celled.table
+    thead
+    tbody
+      - @users.each do |user|
+        tr
+          td = user.name
+          td = user.email
+          td = user.id
