pages/index: Fix logo url.

--- a/app/views/pages/index.slim
+++ b/app/views/pages/index.slim
@@ -1,10 +1,9 @@
 section.intro
   .wrapper
-    img src="kds.png"
+    img src="/kds.png"
     .content
       h1 Conference Commander
       h3 Laget gjennom Ruby Roundtable
-
 
 section.logo-divider.two
   .content
