--- a/app/views/users/index.slim
+++ b/app/views/users/index.slim
@@ -5,4 +5,4 @@
         td = user.name
         td = user.email
         td = user.id
-
+        td = link_to t('edit_user_button'), edit_user_path(user)
