--- a/app/views/users/index.slim
+++ b/app/views/users/index.slim
@@ -7,4 +7,6 @@
           td = user.name
           td = user.email
           td = user.id
-          td = link_to t('edit_user_button'), edit_user_path(user)
+          td
+            = link_to fa_icon('pencil-square-o'), edit_user_path(user)
+            = link_to fa_icon('remove'), user_path(user), method: :delete
