Add gender to user form

--- a/app/views/users/_form.slim
+++ b/app/views/users/_form.slim
@@ -1,4 +1,5 @@
 = simple_form_for @user do |u|
   = u.input :name
   = u.input :email
+  = u.input :gender, as: :radio_buttons, collection: User.genders.keys
   = u.button :submit
