--- a/app/assets/stylesheets/frontpage.scss
+++ b/app/assets/stylesheets/frontpage.scss
@@ -2,449 +2,452 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-body, html{
+html, body {
   height: 100%;
   background: #fff;
   color: #666;
   line-height: 1.3;
 }
 
-section:nth-child(2) {
-	background-color: #fafafa;
-}
+#frontpage {
 
-*, *:before, *:after {
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-}
+  section:nth-child(2) {
+  	background-color: #fafafa;
+  }
 
-h2 {
-  font-family: 'Raleway', sans-serif;
-  font-weight: 300;
-  font-size: 35px;
-  margin: 0;
-  padding: 0;
-}
+  *, *:before, *:after {
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+  }
 
-dt, .important {
-  font-weight: bold;
-}
+  h2 {
+    font-family: 'Raleway', sans-serif;
+    font-weight: 300;
+    font-size: 35px;
+    margin: 0;
+    padding: 0;
+  }
 
-dd {
-  margin-left: 0;
-  margin-bottom: 10px;
-}
-
-.important,.subtext {
-  font-style: italic;
-}
-
-a {
-  color: #666;
-}
-
-.btn {
-  border-radius: 5px;
-  background: #85d6cb;
-  color: #fff;
-  display: block;
-  font-family: 'Raleway', sans-serif;
-  font-size: 1.4em;
-  margin: 30px auto;
-  max-width: 400px;
-  padding: 20px;
-  text-align: center;
-  text-decoration: none;
-}
-
-.lead {
-  font-family: 'Raleway', sans-serif;
-  font-weight: 300;
-  font-size: 25px;
-
-}
-
-/* Layout */
-section {
-  width: 100%;
-  /*min-height: 100%;*/
-  position: relative;
-	padding-bottom: 6em;
-}
-
-section:nth-child(n+1) {
-	padding-top: 6em;
-}
-
-.intro {
-  min-height: 100%;
-  position: relative;
-  background: #fff;
-}
-
-.intro .wrapper {
-  text-align: center;
-}
-
-.intro img {
-  width: 100%;
-  margin: 30px 0;
-}
-
-.intro .content {
-  color: #999;
-}
-
-.content h1 {
-  font-family: 'Raleway', sans-serif;
-  font-weight: 100;
-  font-size: 55px;
-  margin: 0 0 20px 0;
-  padding: 0;
-  line-height: 1;
-}
-
-.content h3 {
-  font-family: 'Raleway', sans-serif;
-  font-weight: 500;
-  font-size: 25px;
-  margin: 0;
-  padding: 0;
-}
-
-.logo-divider::before {
-  top: -40px;
-  background: #ceefeb;
-  box-shadow: -40px 40px 0 #85d6cb, 40px -40px 0 #85d6cb;
-}
-
-.logo-divider::before {
-  left: 50%;
-  width: 80px;
-  height: 80px;
-  -webkit-transform: translateX(-50%) rotate(45deg);
-  transform: translateX(-50%) rotate(45deg);
-}
-
-.logo-divider::before  {
-  position: absolute;
-  content: '';
-  pointer-events: none;
-}
-
-.content h1 {
-  text-align: center;
-}
-
-.schedule, .talks {
-  padding-top: 100px;
-}
-.schedule h1 {
-  text-align: center;
-}
-.schedule-day {
-  margin-top: 20px;
-  clear: both;
-}
-.schedule-all-tracks {
-  clear: both;
-}
-h3.schedule-all-tracks {
-  margin: 20px 0;
-  padding: 5px;
-  background: #fafafa;
-}
-h3.schedule-all-tracks.session {
-  background: #85d6cb;
-}
-h4 {
-  font-family: 'Raleway', sans-serif;
-  font-weight: 300;
-  font-size: 25px;
-
-}
-h4.schedule-all-tracks {
-  padding: 0;
-  margin: 10px 0;
-}
-
-.fav {
-  font-size: 1.5em;
-  cursor: pointer;
-}
-
-/*
-.schedule-slot--faved {
-  background-color: lightyellow;
-}
-
-.schedule-slot--faved .fav {
-  color: orange;
-  text-shadow: 0 0 1px yellow;
-}
-*/
-
-.favourited {
-  background-color: lightyellow;
-}
-
-.favourited .fav {
-  color: orange;
-  text-shadow: 0 0 1px yellow;
-}
-
-.my-content-only .talks-entry {
-  display: none;
-}
-
-.my-content-only .talks-entry.favourited {
-  display: block;
-}
-
-table, th, td,  tr{
-  border: 1px solid black;
-}
-table{
-   width: 100%;
-}
-
-td, th{
-  padding: 10px;
-}
-.time{
-  vertical-align: top;
-  width: 1em;
-  white-space:nowrap;
-}
-
-.topics {
-    line-height: 2em;
-}
-
-.topic::after {
-  content: ' â—† ';
-  color: #85d6cb;
-}
-
-.topic:last-of-type::after {
-  content: '';
-}
-
-.schedule-collection {
-  clear: both;
-}
-
-.schedule-entry {
-  margin-bottom: 20px;
-  background: #fafafa;
-}
-
-/*
-.schedule-entry .pending { background: orange; }
-.schedule-entry .rejected { background: red; }
-*/
-
-.schedule-entry h5 {
-  background: #C3ECE6;
-  font-weight: normal;
-  padding: 5px;
-  margin: 0;
-}
-
-.schedule-entry p {
-  font-weight: bold;
-  margin: 10px 10px 0 10px;
-}
-
-.schedule-entry p[lang=no]:after {
-    display: inline-block;
-    content: url(norway.png);
-    padding-left: 4px;
-}
-
-.schedule-entry p[lang=sv]:after {
-    display: inline-block;
-    content: url(sweden.png);
-    padding-left: 4px;
-}
-
-.schedule-entry address {
-  margin: 0px 10px 10px 10px;
-}
-
-.schedule-entry .annote {
-  font-weight: normal;
-}
-
-.talks-entry {
-  margin-bottom: 3em;
-}
-
-
-.location {
-  height: 100%;
-  padding-bottom: 0;
-  overflow: hidden;
-}
-
-.location iframe {
-  margin-top: 90px;
-}
-
-.location .wrapper {
-  height: 100%;
-}
-
-.location .content {
-  position: absolute;
-  top: 0;
-  width: 100%;
-  padding: 20px;
-  background: white;
-}
-
-.location h3 {
-  font-size: 20px;
-}
-
-.blocker {
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-}
-
-@media (min-width: 760px) {
-  dt {
-    text-align: right;
-    padding-right: 15px;
-    float: left;
-    width: 165px;
+  dt, .important {
     font-weight: bold;
   }
 
   dd {
-    margin-left: 165px;
+    margin-left: 0;
     margin-bottom: 10px;
   }
 
-  .intro img {
-    width: 300px;
-    height: 300px;
-    margin: 0;
-    float: left;
-    margin-top: 26px;
+  .important,.subtext {
+    font-style: italic;
   }
 
-  .intro .content {
-    float: left;
-    width: 340px;
-    border-left: 1px dotted #999;
-    margin: 26px 0 26px 50px;
-    padding: 10px 0 10px 50px;
-    text-align: left;
+  a {
+    color: #666;
   }
 
-  .intro .content h1 {
-    margin: 0;
+  .btn {
+    border-radius: 5px;
+    background: #85d6cb;
+    color: #fff;
+    display: block;
+    font-family: 'Raleway', sans-serif;
+    font-size: 1.4em;
+    margin: 30px auto;
+    max-width: 400px;
+    padding: 20px;
+    text-align: center;
+    text-decoration: none;
+  }
+
+  .lead {
+    font-family: 'Raleway', sans-serif;
+    font-weight: 300;
+    font-size: 25px;
+
+  }
+
+  /* Layout */
+  section {
+    width: 100%;
+    /*min-height: 100%;*/
+    position: relative;
+  	padding-bottom: 6em;
+  }
+
+  section:nth-child(n+1) {
+  	padding-top: 6em;
+  }
+
+  .intro {
+    min-height: 100%;
+    position: relative;
+    background: #fff;
   }
 
   .intro .wrapper {
-    width: 690px;
-    height: 300px;
-    top: 50%;
-    left: 50%;
-    position: absolute;
-    margin-top: -150px;
-    margin-left: -345px;
+    text-align: center;
   }
 
-  .location .content {
-    width: 350px;
-    height: 200px;
-    padding: 20px;
-    top: 10px;
-    left: 10px;
-    position: absolute;
-    text-align: left;
-    background: white;
+  .intro img {
+    width: 100%;
+    margin: 30px 0;
   }
 
-  .location iframe {
-    margin-top: 0;
-  }
-
-  .two, .schedule, .talks {
-    padding: 100px 0;
-  }
-
-  .two .center {
-    min-width: 400px;
-    margin: auto;
-    margin-top: -25px;
+  .intro .content {
+    color: #999;
   }
 
   .content h1 {
-    line-height: 1.3;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 100;
+    font-size: 55px;
+    margin: 0 0 20px 0;
+    padding: 0;
+    line-height: 1;
   }
 
-  .two .content, .schedule .content, .talks .content {
-    margin: 0 auto;
-    width: 700px;
+  .content h3 {
+    font-family: 'Raleway', sans-serif;
+    font-weight: 500;
+    font-size: 25px;
+    margin: 0;
+    padding: 0;
   }
 
-  .schedule .content {
-      overflow: hidden;
+  .logo-divider::before {
+    top: -40px;
+    background: #ceefeb;
+    box-shadow: -40px 40px 0 #85d6cb, 40px -40px 0 #85d6cb;
   }
 
-  .schedule.progComView .content {
-    width: 90%;
+  .logo-divider::before {
+    left: 50%;
+    width: 80px;
+    height: 80px;
+    -webkit-transform: translateX(-50%) rotate(45deg);
+    transform: translateX(-50%) rotate(45deg);
+  }
+
+  .logo-divider::before  {
+    position: absolute;
+    content: '';
+    pointer-events: none;
+  }
+
+  .content h1 {
+    text-align: center;
+  }
+
+  .schedule, .talks {
+    padding-top: 100px;
+  }
+  .schedule h1 {
+    text-align: center;
+  }
+  .schedule-day {
+    margin-top: 20px;
+    clear: both;
+  }
+  .schedule-all-tracks {
+    clear: both;
+  }
+  h3.schedule-all-tracks {
+    margin: 20px 0;
+    padding: 5px;
+    background: #fafafa;
+  }
+  h3.schedule-all-tracks.session {
+    background: #85d6cb;
+  }
+  h4 {
+    font-family: 'Raleway', sans-serif;
+    font-weight: 300;
+    font-size: 25px;
+
+  }
+  h4.schedule-all-tracks {
+    padding: 0;
+    margin: 10px 0;
+  }
+
+  .fav {
+    font-size: 1.5em;
+    cursor: pointer;
+  }
+
+  /*
+  .schedule-slot--faved {
+    background-color: lightyellow;
+  }
+
+  .schedule-slot--faved .fav {
+    color: orange;
+    text-shadow: 0 0 1px yellow;
+  }
+  */
+
+  .favourited {
+    background-color: lightyellow;
+  }
+
+  .favourited .fav {
+    color: orange;
+    text-shadow: 0 0 1px yellow;
+  }
+
+  .my-content-only .talks-entry {
+    display: none;
+  }
+
+  .my-content-only .talks-entry.favourited {
+    display: block;
+  }
+
+  table, th, td,  tr{
+    border: 1px solid black;
+  }
+  table{
+     width: 100%;
+  }
+
+  td, th{
+    padding: 10px;
+  }
+  .time{
+    vertical-align: top;
+    width: 1em;
+    white-space:nowrap;
+  }
+
+  .topics {
+      line-height: 2em;
+  }
+
+  .topic::after {
+    content: ' â—† ';
+    color: #85d6cb;
+  }
+
+  .topic:last-of-type::after {
+    content: '';
+  }
+
+  .schedule-collection {
+    clear: both;
   }
 
   .schedule-entry {
-    float: left;
-  }
-  .with-4-entries .schedule-entry {
-    width: 23.5%;
-    margin-right: 2%;
-  }
-
-  .with-3-entries .schedule-entry {
-    width: 32%;
-    margin-right: 2%;
-  }
-
-  .with-2-entries .schedule-entry {
-    width: 49%;
-    margin-right: 2%;
-  }
-  .with-1-entries .schedule-entry {
-    width: 100%;
-    margin-right: 0;
-  }
-
-  .schedule-entry:last-child {
-    margin-right: 0;
-  }
-
-  .speaker {
     margin-bottom: 20px;
-    overflow: auto;
+    background: #fafafa;
+  }
+
+  /*
+  .schedule-entry .pending { background: orange; }
+  .schedule-entry .rejected { background: red; }
+  */
+
+  .schedule-entry h5 {
+    background: #C3ECE6;
+    font-weight: normal;
+    padding: 5px;
+    margin: 0;
+  }
+
+  .schedule-entry p {
+    font-weight: bold;
+    margin: 10px 10px 0 10px;
+  }
+
+  .schedule-entry p[lang=no]:after {
+      display: inline-block;
+      content: url(norway.png);
+      padding-left: 4px;
+  }
+
+  .schedule-entry p[lang=sv]:after {
+      display: inline-block;
+      content: url(sweden.png);
+      padding-left: 4px;
+  }
+
+  .schedule-entry address {
+    margin: 0px 10px 10px 10px;
+  }
+
+  .schedule-entry .annote {
+    font-weight: normal;
+  }
+
+  .talks-entry {
+    margin-bottom: 3em;
+  }
+
+
+  .location {
+    height: 100%;
+    padding-bottom: 0;
+    overflow: hidden;
+  }
+
+  .location iframe {
+    margin-top: 90px;
+  }
+
+  .location .wrapper {
+    height: 100%;
+  }
+
+  .location .content {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    padding: 20px;
+    background: white;
+  }
+
+  .location h3 {
+    font-size: 20px;
+  }
+
+  .blocker {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+  }
+
+  @media (min-width: 760px) {
+    dt {
+      text-align: right;
+      padding-right: 15px;
+      float: left;
+      width: 165px;
+      font-weight: bold;
+    }
+
+    dd {
+      margin-left: 165px;
+      margin-bottom: 10px;
+    }
+
+    .intro img {
+      width: 300px;
+      height: 300px;
+      margin: 0;
+      float: left;
+      margin-top: 26px;
+    }
+
+    .intro .content {
+      float: left;
+      width: 340px;
+      border-left: 1px dotted #999;
+      margin: 26px 0 26px 50px;
+      padding: 10px 0 10px 50px;
+      text-align: left;
+    }
+
+    .intro .content h1 {
+      margin: 0;
+    }
+
+    .intro .wrapper {
+      width: 690px;
+      height: 300px;
+      top: 50%;
+      left: 50%;
+      position: absolute;
+      margin-top: -150px;
+      margin-left: -345px;
+    }
+
+    .location .content {
+      width: 350px;
+      height: 200px;
+      padding: 20px;
+      top: 10px;
+      left: 10px;
+      position: absolute;
+      text-align: left;
+      background: white;
+    }
+
+    .location iframe {
+      margin-top: 0;
+    }
+
+    .two, .schedule, .talks {
+      padding: 100px 0;
+    }
+
+    .two .center {
+      min-width: 400px;
+      margin: auto;
+      margin-top: -25px;
+    }
+
+    .content h1 {
+      line-height: 1.3;
+    }
+
+    .two .content, .schedule .content, .talks .content {
+      margin: 0 auto;
+      width: 700px;
+    }
+
+    .schedule .content {
+        overflow: hidden;
+    }
+
+    .schedule.progComView .content {
+      width: 90%;
+    }
+
+    .schedule-entry {
+      float: left;
+    }
+    .with-4-entries .schedule-entry {
+      width: 23.5%;
+      margin-right: 2%;
+    }
+
+    .with-3-entries .schedule-entry {
+      width: 32%;
+      margin-right: 2%;
+    }
+
+    .with-2-entries .schedule-entry {
+      width: 49%;
+      margin-right: 2%;
+    }
+    .with-1-entries .schedule-entry {
+      width: 100%;
+      margin-right: 0;
+    }
+
+    .schedule-entry:last-child {
+      margin-right: 0;
+    }
+
+    .speaker {
+      margin-bottom: 20px;
+      overflow: auto;
+    }
+
+    .speaker .bio-pic {
+      float: left;
+    }
+
+    .speaker .bio {
+      margin-left: 170px;
+    }
   }
 
   .speaker .bio-pic {
-    float: left;
+    border-radius: 50%;
+    width: 150px;
+    background-color: #efefef;
   }
-
-  .speaker .bio {
-    margin-left: 170px;
-  }
-}
-
-.speaker .bio-pic {
-  border-radius: 50%;
-  width: 150px;
-  background-color: #efefef;
 }
