--- a/app/views/users/index.slim
+++ b/app/views/users/index.slim
@@ -8,5 +8,5 @@
           td = user.email
           td = user.id
           td
-            = link_to fa_icon('pencil-square-o'), edit_user_path(user)
+            => link_to fa_icon('pencil'), edit_user_path(user)
             = link_to fa_icon('remove'), user_path(user), method: :delete
