--- a/app/views/users/_form.slim
+++ b/app/views/users/_form.slim
@@ -1,5 +1,5 @@
 = simple_form_for @user do |u|
-  = u.input :name
-  = u.input :email
+  = u.input :name, as: :string
+  = u.input :email, as: :string
   = u.input :gender, as: :radio_buttons, collection: User.genders.keys
   = u.button :submit
