Add link to event in user proposals index.

--- a/app/views/proposals/index.slim
+++ b/app/views/proposals/index.slim
@@ -7,5 +7,6 @@
           td = proposal.title
           td = proposal.description
           td = proposal.duration
+          td = link_to proposal.event.name, event_path(proposal.event)
           = link_to fa_icon('pencil-square-o'), edit_user_proposal_path(@user, proposal)
           = link_to fa_icon('remove'), user_proposal_path(@user, proposal), method: :delete
