--- a/app/views/event_proposals/index.slim
+++ b/app/views/event_proposals/index.slim
@@ -1,3 +1,5 @@
+= link_to fa_icon('plus'), new_event_proposal_path(@event)
+
 - unless @proposals.empty?
   table.ui.celled.table
     thead
@@ -8,4 +10,6 @@
           td = proposal.description
           td = proposal.duration
           td = link_to proposal.event.name, event_path(proposal.event)
-          td = link_to proposal.user.name, event_path(proposal.user)
+          td
+            = link_to fa_icon('pencil-square-o'), edit_event_proposal_path(@event, proposal)
+            = link_to fa_icon('remove'), event_proposal_path(@event, proposal), method: :delete
