List all participants in event#show.

--- a/app/views/events/show.html.slim
+++ b/app/views/events/show.html.slim
@@ -1,9 +1,38 @@
 div
-  p = @event.name
-  p = @event.description
-  p = @event.starting_at
-  p = @event.ending_at
+  h3 Event info
+  table.ui.celled.table
+    thead
+      tr
+        th name
+        th description
+        th start date/time
+        th end date/time
+        th
+    tbody
+      tr
+        td = @event.name
+        td = @event.description
+        td = @event.starting_at
+        td = @event.ending_at
+        td
+          div.ui.mini.buttons
+            = link_to "Edit", edit_event_path, class: "ui button primary"
+            div.or
+            = link_to "Delete", event_path(@event), method: :delete, class: "ui button"
 
   div
-    = link_to "Edit", edit_event_path
-    = link_to "Delete", event_path(@event), method: :delete
+    h4 Participants
+
+    - unless @event.participants.empty?
+      table.ui.celled.table
+        thead
+          tr
+            th name
+            th email
+            th role
+        tbody
+          - @event.participants.each do |participant|
+            tr
+              td = link_to participant.name, user_path(participant)
+              td = participant.email
+              td = participant.role
