--- a/app/views/layouts/_menu.slim
+++ b/app/views/layouts/_menu.slim
@@ -2,3 +2,4 @@
   .item = link_to 'Conference Commander', root_path
   .item = link_to User.model_name.human.pluralize, users_path
   .item = link_to Event.model_name.human.pluralize, events_path
+  .item = link_to Accommodation.model_name.human.pluralize, accommodations_path
