--- a/app/views/proposals/index.slim
+++ b/app/views/proposals/index.slim
@@ -8,4 +8,4 @@
           td = proposal.description
           td = proposal.duration
           td = link_to proposal.event.name, event_path(proposal.event)
-          td = link_to proposal.user.name, event_path(proposal.user)
+          td = link_to proposal.user.name, user_path(proposal.user)
