--- a/app/views/events/index.html.slim
+++ b/app/views/events/index.html.slim
@@ -7,10 +7,16 @@
         th = Event.human_attribute_name(:description)
         th = Event.human_attribute_name(:starting_at)
         th = Event.human_attribute_name(:ending_at)
+        th
     tbody
       - @events.each do |event|
         tr
-          td = event.name
+          td = link_to event.name, event_path(event)
           td = event.description
-          td = event.starting_at
-          td = event.ending_at
+          td = event.starting_at.strftime("%d/%m/%Y")
+          td = event.ending_at.strftime("%d/%m/%Y")
+          td
+            div.ui.mini.buttons
+              = link_to "Edit", edit_event_path(event), class: "ui button primary"
+              div.or
+              = link_to "Delete", event_path(event), method: :delete, class: "ui button"
