Adds shared links, more styling

--- a/app/views/accommodations/_form.slim
+++ b/app/views/accommodations/_form.slim
@@ -1,4 +1,4 @@
 = simple_form_for @accommodation do |u|
   = u.input :number_of_beds, as: :integer
-  = u.association :event
+  = u.association :event, input_html: { class: 'ui fluid dropdown' }
   = u.button :submit
