--- a/app/views/accommodations/index.slim
+++ b/app/views/accommodations/index.slim
@@ -1,4 +1,4 @@
-= link_to t('accommodations.table.tooltips.new'), new_accommodation_path
+= render 'shared/new_link'
 
 - unless @accommodations.empty?
   table.ui.celled.table
@@ -14,6 +14,4 @@
           td = accommodation.number_of_beds
           td = accommodation.event && accommodation.event.name
           td = accommodation.id
-          td
-            = link_to fa_icon('pencil'), edit_accommodation_path(accommodation), class: 'ui button', data: {tooltip: t('accommodations.table.tooltips.edit')}
-            = link_to fa_icon('remove'), accommodation_path(accommodation), method: :delete, class: 'ui button', data: {tooltip: t('accommodations.table.tooltips.delete')}
+          td = render 'shared/action_links', object: accommodation
