--- a/app/views/events/index.html.slim
+++ b/app/views/events/index.html.slim
@@ -1,4 +1,5 @@
-= link_to "Add new event", new_event_path
+= render 'shared/new_link'
+
 - unless @events.empty?
   table.ui.celled.table
     thead
@@ -15,8 +16,4 @@
           td = event.description
           td = event.starting_at
           td = event.ending_at
-          td
-            div.ui.mini.buttons
-              = link_to "Edit", edit_event_path(event), class: "ui button primary"
-              div.or
-              = link_to "Delete", event_path(event), method: :delete, class: "ui button"
+          td = render 'shared/action_links', object: event
