Adding crudable titles

--- a/app/views/event_proposals/_form.slim
+++ b/app/views/event_proposals/_form.slim
@@ -1,3 +1,5 @@
+= render 'shared/crud_title'
+
 = simple_form_for [@event, @proposal] do |f|
   = f.input :title, as: :string
   = f.input :description
