--- a/app/views/users/_form.slim
+++ b/app/views/users/_form.slim
@@ -1,10 +1,14 @@
+= render 'shared/crud_title'
+
 = simple_form_for @user do |u|
+
   = u.input :name, as: :string
   = u.input :email, as: :string
+  
   .inline.fields
     - User.genders.keys.each do |gender|
       .field
         = u.radio_button :gender, gender
         = u.label gender
-        
+
   = u.button :submit
