--- a/app/views/accommodations/_form.slim
+++ b/app/views/accommodations/_form.slim
@@ -1,3 +1,5 @@
+= render 'shared/crud_title'
+
 = simple_form_for @accommodation do |u|
   = u.input :number_of_beds, as: :integer
   = u.association :event, input_html: { class: 'ui fluid dropdown' }
