Adds crudable layout

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -10,4 +10,4 @@ html
     = render 'layouts/menu'
     .ui.page.grid
       .wide.column
-        = yield
+        = content_for?(:content) ? yield(:content) : yield
