--- a/app/views/participations/_form.html.slim
+++ b/app/views/participations/_form.html.slim
@@ -1,6 +1,4 @@
 = render 'shared/crud_title'
-
-= simple_form_for @participation do |u|
+= simple_form_for [@event, @participation]  do |u|
   = u.association :user
-  = u.association :event
   = u.button :submit
