--- a/app/views/events/index.html.slim
+++ b/app/views/events/index.html.slim
@@ -6,6 +6,7 @@
         th = Event.human_attribute_name(:description)
         th = Event.human_attribute_name(:starting_at)
         th = Event.human_attribute_name(:ending_at)
+        th registration
         th
     tbody
       - @events.each do |event|
@@ -14,4 +15,9 @@
           td = event.description
           td = event.starting_at.strftime("%d/%m/%Y")
           td = event.ending_at.strftime("%d/%m/%Y")
-          td = render 'shared/action_links', object: event
+          td = link_to fa_icon('check-circle-o 2x'), new_event_participation_path(event)
+          td
+            div.ui.mini.buttons
+              = link_to "Edit", edit_event_path(event), class: "ui button primary"
+              div.or
+              = link_to "Delete", event_path(event), method: :delete, class: "ui button"
