--- a/app/views/participations/index.html.slim
+++ b/app/views/participations/index.html.slim
@@ -1,18 +1,22 @@
-table
+h1 Listing participations
+
+= link_to 'New Participation', new_event_participation_path(@event)
+table.ui.celled.table
   thead
     tr
       th = User.human_attribute_name(:name)
       th = Event.human_attribute_name(:name)
       th
-      th
 
   tbody
     - @participations.each do |participation|
       tr
-        td = participation.user&.name
-        td = participation.event&.name
-        td = link_to 'Show', participation
-        td = link_to 'Edit', edit_participation_path(participation)
-        td = link_to 'Destroy', participation, data: { confirm: 'Are you sure?' }, method: :delete
-
-br
+        td = participation.user.name
+        td = participation.event.name
+        td
+          div.ui.mini.buttons
+            = link_to 'Show', event_participation_path(@event, participation), class: "ui button primary"
+            div.or
+            = link_to 'Edit', edit_event_participation_path(@event, participation), class: "ui button"
+            div.or
+            = link_to 'Destroy', event_participation_path(@event, participation), data: { confirm: 'Are you sure?' }, method: :delete, class: "ui button negative"
