--- a/app/views/participations/show.html.slim
+++ b/app/views/participations/show.html.slim
@@ -1,9 +1,21 @@
 p#notice = notice
 
-- if @participation
-  p = @participation.user&.name
-  p = @participation.event&.name
+table.ui.celled.table
+  thead
+    tr
+      th name
+      th event name
+      th
 
-= link_to 'Edit', edit_participation_path(@participation)
-'|
-= link_to 'Back', participations_path
+  tbody
+      tr
+        td = @participation.user.name
+        td = @participation.event.name
+        td
+          div.ui.mini.buttons
+            = link_to 'Show', event_participation_path(@event, @participation), class: "ui button primary"
+            div.or
+            = link_to 'Edit', edit_event_participation_path(@event, @participation), class: "ui button"
+            div.or
+            = link_to 'Destroy', event_participation_path(@event, @participation), data: { confirm: 'Are you sure?' }, method: :delete, class: "ui button negative"
+= link_to 'Back', event_participations_path(@event)
