Added single room information to participations

--- a/app/views/participations/_form.html.slim
+++ b/app/views/participations/_form.html.slim
@@ -1,4 +1,6 @@
 = render 'shared/crud_title'
 = simple_form_for [@event, @participation]  do |u|
+  .inline.fields
+    = u.input :single_room, as: :radio_buttons
   = u.association :user
   = u.button :submit
