--- a/app/views/participations/index.html.slim
+++ b/app/views/participations/index.html.slim
@@ -6,6 +6,7 @@ table.ui.celled.table
     tr
       th = User.human_attribute_name(:name)
       th = Event.human_attribute_name(:name)
+      th Single room?
       th
 
   tbody
@@ -13,6 +14,7 @@ table.ui.celled.table
       tr
         td = participation.user.name
         td = participation.event.name
+        td = participation.single_room
         td
           div.ui.mini.buttons
             = link_to 'Show', event_participation_path(@event, participation), class: "ui button primary"
