--- a/app/views/pages/front.slim
+++ b/app/views/pages/front.slim
@@ -1,7 +1,7 @@
 section.frontpage-image-background#lofoten
   div.intro-elements
     img src="/assets/knowit_logo_white_rgb.png"
-    button.ui.button.knowit-purple Logg inn
+    = link_to "Logg inn", signin_path, class: "ui button knowit-purple"
     button.ui.button.knowit-green#show-conferences Vis konferanser
 
 = render 'layouts/menu', fixed: false
