Now uses cancan in menu.

--- a/app/views/layouts/_menu.slim
+++ b/app/views/layouts/_menu.slim
@@ -1,6 +1,11 @@
+- puts current_user.inspect
 .ui.secondary.pointing.menu#top-menu class="#{fixed ? 'fixed' : ''}"
   .item = link_to 'Frontpage', root_path
-  .item = link_to User.model_name.human.pluralize, users_path
-  .item = link_to Event.model_name.human.pluralize, events_path
-  .item = link_to Proposal.model_name.human.pluralize, proposals_path
-  .item = link_to Accommodation.model_name.human.pluralize, accommodations_path
+  - if can? :read, User
+    .item = link_to User.model_name.human.pluralize, users_path
+  - if can? :read, Event
+    .item = link_to Event.model_name.human.pluralize, events_path
+  - if can? :read, Proposal
+    .item = link_to Proposal.model_name.human.pluralize, proposals_path
+  - if can? :read, Accommodation
+    .item = link_to Accommodation.model_name.human.pluralize, accommodations_path
