--- a/app/views/participations/index.html.slim
+++ b/app/views/participations/index.html.slim
@@ -7,6 +7,7 @@ table.ui.celled.table
       th = User.human_attribute_name(:name)
       th = Event.human_attribute_name(:name)
       th Single room?
+      th Reason for singe room?
       th
 
   tbody
@@ -15,6 +16,7 @@ table.ui.celled.table
         td = participation.user.name
         td = participation.event.name
         td = participation.single_room
+        td = participation.request_for_single_room
         td
           div.ui.mini.buttons
             = link_to 'Show', event_participation_path(@event, participation), class: "ui button primary"
