--- a/app/views/participations/show.html.slim
+++ b/app/views/participations/show.html.slim
@@ -20,4 +20,4 @@ table.ui.celled.table
             = link_to 'Edit', edit_event_participation_path(@event, @participation), class: "ui button"
             div.or
             = link_to 'Destroy', event_participation_path(@event, @participation), data: { confirm: 'Are you sure?' }, method: :delete, class: "ui button negative"
-= link_to 'Back', event_participations_path(@event)
+= link_to 'Back', event_path(@event)
