Changed from destroy to delete on buttons

--- a/app/views/events/show.html.slim
+++ b/app/views/events/show.html.slim
@@ -20,7 +20,7 @@ div
           div.ui.mini.buttons
             = link_to "Edit", edit_event_path(@event), class: "ui button primary"
             div.or
-            = link_to "Delete", event_path(@event), method: :delete, class: "ui button"
+            = link_to "Delete", event_path(@event), method: :delete, class: "ui button negative"
 
   div
     h4 Participants
