--- a/app/views/events/index.html.slim
+++ b/app/views/events/index.html.slim
@@ -20,4 +20,4 @@
             div.ui.mini.buttons
               = link_to "Edit", edit_event_path(event), class: "ui button primary"
               div.or
-              = link_to "Delete", event_path(event), method: :delete, class: "ui button"
+              = link_to "Delete", event_path(event), method: :delete, class: "ui button negative"
