--- a/app/views/participations/index.html.slim
+++ b/app/views/participations/index.html.slim
@@ -23,4 +23,4 @@ table.ui.celled.table
             div.or
             = link_to 'Edit', edit_event_participation_path(@event, participation), class: "ui button"
             div.or
-            = link_to 'Destroy', event_participation_path(@event, participation), data: { confirm: 'Are you sure?' }, method: :delete, class: "ui button negative"
+            = link_to 'Delete', event_participation_path(@event, participation), data: { confirm: 'Are you sure?' }, method: :delete, class: "ui button negative"
