Adds locale yml file and moves most text there

--- a/app/views/accommodations/index.slim
+++ b/app/views/accommodations/index.slim
@@ -4,12 +4,10 @@
       tr
         th = Accommodation.human_attribute_name(:number_of_beds)
         th = Accommodation.human_attribute_name(:event)
-        th = Accommodation.human_attribute_name(:id)
-        th
+        th = t('.actions')
     tbody
       - @accommodations.each do |accommodation|
         tr
           td = accommodation.number_of_beds
-          td = accommodation.event && accommodation.event.name
-          td = accommodation.id
+          td = accommodation.event ? accommodation.event.name : ''
           td = render 'shared/action_links', object: accommodation
