--- a/app/views/shared/_action_links.slim
+++ b/app/views/shared/_action_links.slim
@@ -1,4 +1,5 @@
 div.ui.mini.buttons
-  = link_to "Edit", edit_polymorphic_path(object), class: "ui button primary"
+  = link_to t('.edit'), edit_polymorphic_path(object), class: "ui button primary"
   div.or
-  = link_to "Delete", polymorphic_path(object), method: :delete, class: "ui button negative"
+  = link_to t('.delete'), polymorphic_path(object), method: :delete, class: "ui button negative"
+
