--- a/app/views/shared/_crud_title.slim
+++ b/app/views/shared/_crud_title.slim
@@ -1,2 +1,2 @@
-h2 = "#{action_name.capitalize} #{controller_name.classify.downcase}"
+h2 = "#{action_name.capitalize} #{controller_name.classify.constantize.model_name.human.downcase}"
 hr
