--- a/app/assets/stylesheets/frontpage.scss
+++ b/app/assets/stylesheets/frontpage.scss
@@ -28,6 +28,7 @@ html, body {
     min-height: 256px;
     background-attachment: fixed;
     background-position: top center;
+    background-size: 100% !important;
     background-repeat: no-repeat;
   }
   #lofoten {
